# TrueRPG

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  README_RU.md
.github/workflows/: cmake.yml  lint.yml
libs/entt/: CMakeLists.txt
libs/luaJIT/msvc/: lua51.lib
libs/luaJIT/windows/x64/: lua51.exp
libs/luaJIT/windows/x86/: lua51.exp  lua51.lib
libs/vma/: CMakeLists.txt
libs/vma/include/: vk_mem_alloc.h
res/animators/: character.yaml
res/configs/: graphics.yml  key-mapping.yml
res/scripts/: test.lua  test2.lua
res/shaders/: g_buffer.fs  g_buffer.vs  global_light.fs  global_light.vs  point_light.fs  point_light.vs  shader.fs  ui.fs  ui.vs
scripts/: find-files-without-include.zsh  pch-included-everywhere.zsh
src/: Game.cpp  Game.h  RTime.h  main.cpp  pch.h
src/client/: Engine.cpp  Engine.h
src/client/animation/: SpriteAnimation.h  SpriteAnimator.cpp  SpriteAnimator.h
src/client/audio/: AudioDevice.cpp  AudioDevice.h  AudioSource.cpp  AudioSource.h  CachedAudioClip.cpp  CachedAudioClip.h  IAudioClip.h  StreamAudioClip.cpp  StreamAudioClip.h
src/client/graphics/: Bitmap.cpp  Bitmap.h  Buffer.cpp  Buffer.h  Font.cpp  Font.h  Graphics.h  GraphicsConfig.cpp  GraphicsConfig.h  IGraphicsContext.h  IShader.h  ISpriteBatch.h  ITexture.h  Light.cpp  Light.h  PrimitiveType.h  Quad.cpp  Rect.h  Shader.cpp  Shader.h  ShaderInfo.h  Sprite.cpp  Sprite.h  SpriteBatch.cpp  SpriteBatch.h  Text.cpp  Text.h  Texture.cpp  Texture.h  Uniforms.h  Vertex.h  VertexArray.cpp
src/client/graphics/OpenGL/: Buffer.cpp  Buffer.h  GLContext.cpp  GLContext.h  Quad.cpp  Quad.h  Shader.cpp  Shader.h  SpriteBatch.cpp  SpriteBatch.h  Texture.cpp  Texture.h  UniformBuffer.h  VertexArray.cpp  VertexArray.h
src/client/graphics/Vulkan/: Allocator.cpp  Allocator.h  Device.cpp  Device.h  Instance.cpp  Instance.h  Pipeline.cpp  Pipeline.h  Queue.h  Surface.h  Swapchain.cpp  Swapchain.h  VulkanContext.cpp  VulkanContext.h  VulkanUtils.h
src/client/input/: GlfwKeyMapper.cpp  GlfwKeyMapper.h  IMapper.h  Key.h  KeyMappingConfig.cpp  KeyMappingConfig.h  StringKeyMapper.cpp  StringKeyMapper.h
src/client/window/: GlfwWindow.cpp  GlfwWindow.h  IWindow.h  Window.cpp  Window.h
src/components/animation/: SpriteAnimatorComponent.h
src/components/audio/: AudioListenerComponent.h  AudioSourceComponent.cpp  AudioSourceComponent.h
src/components/basic/: HierarchyComponent.h  TransformComponent.h
src/components/physics/: RectColliderComponent.h  RigidbodyComponent.h
src/components/player/: PlayerComponent.h
src/components/render/: CameraComponent.cpp  CameraComponent.h  GlobalLightComponent.h  LightSourceComponent.h  PoinLightComponent.h  PointLightComponent.h  SpriteRendererComponent.cpp  SpriteRendererComponent.h  TextRendererComponent.cpp  TextRendererComponent.h
src/components/script/: NativeScriptComponent.h
src/components/world/: ClockComponent.h  EnvironmentComponent.h  InventoryComponent.h  ItemComponent.h  WorldMapComponent.h
src/scene/: Entity.cpp  Entity.h  ISystem.h  Scene.cpp  Scene.h
src/scene/components/: AudioSourceComponent.h  AutoOrderComponent.h  HierarchyComponent.h  LuaScriptComponent.h  RigidbodyComponent.h  SpriteRendererComponent.h  TextRendererComponent.h  TileMapComponent.cpp  TileMapComponent.h  WorldMapComponent.h
src/scene/resources/: Chunk.cpp  Chunk.h  TilePallet.cpp
src/scene/systems/: AudioSystem.cpp  AudioSystem.h  LightSystem.cpp  LightSystem.h  LuaScriptSystem.cpp  LuaScriptSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  ScriptSystem.cpp  ScriptSystem.h  SpriteAnimatorSystem.cpp  SpriteAnimatorSystem.h
src/scene/utils/: Animation.cpp  Animation.h  Hierarchy.cpp  Hierarchy.h
src/scripts/: BotScript.cpp  BotScript.h  ButtonScript.cpp  ButtonScript.h  DebugInfoScript.cpp  DebugInfoScript.h  InventoryScript.h  PlayerScript.cpp  PlayerScript.h  PumpkinScript.cpp  PumpkinScript.h  WorldGenScript.h  WorldMapScript.cpp  WorldMapScript.h
src/systems/: ClockSystem.cpp  ClockSystem.h
src/systems/animation/: SpriteAnimatorSystem.cpp
src/systems/audio/: AudioSystem.cpp  AudioSystem.h
src/systems/physics/: PhysicsSystem.cpp  PhysicsSystem.h
src/systems/player/: PlayerSystem.cpp  PlayerSystem.h
src/systems/render/: GlobalLightRenderSystem.cpp  GlobalLightRenderSystem.h  ILightRenderSubsystem.h  IRenderSubsystem.h  LightRenderSystem.cpp  LightRenderSystem.h  PointLightRenderSystem.cpp  PointLightRenderSystem.h  RenderSystem.cpp  RenderSystem.h  SpriteAnimatorSystem.cpp  SpriteAnimatorSystem.h  SpriteRenderSystem.cpp  SpriteRenderSystem.h  TextRenderSystem.cpp  TextRenderSystem.h  WorldMapRenderSystem.cpp  WorldMapRenderSystem.h
src/systems/script/: ScriptSystem.cpp  ScriptSystem.h
src/systems/world/: ClockSystem.cpp  ClockSystem.h  EnvironmentSystem.cpp  EnvironmentSystem.h
src/utils/: Animation.cpp  Animation.h  Clock.cpp  Clock.h  Coordinate.h  DayNightCycle.cpp  DayNightCycle.h  Event.hpp  GameTimer.h  Hierarchy.cpp  Hierarchy.h  ImageHelper.cpp  ImageHelper.h  Logger.h  LuaScriptApi.cpp  LuaScriptApi.h  Macros.h  OpenSimplexNoise.cpp  OpenSimplexNoise.h  Result.cpp  Result.h  ScriptContext.cpp  ScriptContext.h  Stack.cpp  Types.h
src/utils/Event/: AbstractEventHandler.hpp  HandlerPtr.hpp  Holder.hpp
src/utils/event/: Holder.hpp  IEventHandler.hpp
toolchains/: ccache.cmake  linuxllvm.cmake
(+58 files in other folders)
